--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     
   my_job:
     needs: [build]
-    name: Google Hook
+    name: Google Hook 🤖
     runs-on: ubuntu-latest
 
     steps:
