--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 jobs:
 
   build:
-    name: build 🧪
+    name: Build 🧪
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +21,18 @@ jobs:
       with:
         node-version: '18.12.0'
     - run: npm ci
+    
+  test:
+    needs: [build]
+    name: Test 📝
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
     - run: npm test
     
   my_job:
     needs: [build]
-    name: Google Hook 🤖
+    name: Alert 🤖
     runs-on: ubuntu-latest
 
     steps:
